--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -4,6 +4,15 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+dependencies {
+    //rx dependencies
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+
+    implementation 'com.google.dagger:dagger:2.40'
+
+    testImplementation 'junit:junit:4.13.2'
 }
